--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -21,16 +21,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="intasc1.html" id="learner">1. Learner Development</a>
-                        <a href="#" id="learner">2. Learning Differences</a>
-                        <a href="intasc3.html" id="learner">3. Learning Environments</a>
-                        <a href="intasc4.html" id="content">4. Content Knowledge</a>
-                        <a href="intasc5.html" id="content">5. Content Application</a>
-                        <a href="intasc6.html" id="instructional">6. Assessment</a>
-                        <a href="intasc7.html" id="instructional">7. Instructional Planning</a>
-                        <a href="intasc8.html" id="instructional">8. Instructional Strategies</a>
-                        <a href="intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
-                        <a href="intasc10.html" id="professional">10. Leadership & Collaboration</a>
+                        <a href="intasc1.html" class="learner">1. Learner Development</a>
+                        <a href="#" class="learner">2. Learning Differences</a>
+                        <a href="intasc3.html" class="learner">3. Learning Environments</a>
+                        <a href="intasc4.html" class="content">4. Content Knowledge</a>
+                        <a href="intasc5.html" class="content">5. Content Application</a>
+                        <a href="intasc6.html" class="instructional">6. Assessment</a>
+                        <a href="intasc7.html" class="instructional">7. Instructional Planning</a>
+                        <a href="intasc8.html" class="instructional">8. Instructional Strategies</a>
+                        <a href="intasc9.html" class="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="intasc10.html" class="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
@@ -79,10 +79,10 @@
                     <p>Report out on what you did to the group. This can count for your group discussion participation.
                     </p>
                     <p>Posted&nbsp;Tue Mar 25, 2025 at 8:58 pm</p>
-                    <p><a href="https://studentaid.gov/" target="_blank"><strong>Submit Your FAFSA
+                    <p><a href="https://studentaid.gov/" rel="noopener" target="_blank"><strong>Submit Your FAFSA
                                 Application</strong></a><strong>
                         </strong>(link to FAFSA; submit screenshot when complete)</p>
-                    <p><a href="https://apply.ctc.edu/user" target="_blank"><strong>Apply to Community
+                    <p><a href="https://apply.ctc.edu/user" rel="noopener" target="_blank"><strong>Apply to Community
                                 College</strong></a><strong>
                         </strong></p>
                     <p>(link to admissions portal for WA State Community &amp; Technical Colleges; submit screenshot
@@ -99,6 +99,7 @@
                         <li>This is often on the school&rsquo;s website</li>
                         <li>Check out ranking on US News and World Report: <a
                                 href="https://www.usnews.com/best-colleges/rankings/national-universities"
+                                rel="noopener"
                                 target="_blank">https://www.usnews.com/best-colleges/rankings/national-universities</a>
                         </li>
                         <li>Google the ranking of your degree program to see if there is some organization ranking
@@ -125,7 +126,7 @@
                     </ul>
                 </div>
                 <img src="../img/FAFSA.png" alt="screenshot submitted by a student to show FAFSA was completed">
-                <embed src="pdf/trade school.pdf" type="application/pdf" width="100%" height="1000px"
+                <embed src="pdf/trade school.pdf" type="application/pdf" width="100%" height="1200px"
                     title="Embedded PDF Document">
             </div>
 
@@ -230,7 +231,7 @@
                                     <p>Bates Technical College</p>
                                 </td>
                                 <td width="188">
-                                    <p><a href="https://www.batestech.edu/"
+                                    <p><a href="https://www.batestech.edu/" rel="noopener"
                                             target="_blank">https://www.batestech.edu/</a></p>
                                 </td>
                                 <td width="69">
@@ -242,7 +243,8 @@
                                     <p>Clover Park Technical College</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://www.cptc.edu/" target="_blank">https://www.cptc.edu/</a></p>
+                                    <p><a href="https://www.cptc.edu/" rel="noopener"
+                                            target="_blank">https://www.cptc.edu/</a></p>
                                 </td>
                                 <td>
                                     <p>Puyallup</p>
@@ -253,7 +255,7 @@
                                     <p>Green River College</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://www.greenriver.edu/"
+                                    <p><a href="https://www.greenriver.edu/" rel="noopener"
                                             target="_blank">https://www.greenriver.edu/</a></p>
                                 </td>
                                 <td>
@@ -265,7 +267,8 @@
                                     <p>Lake Washington Institute of Technology</p>
                                 </td>
                                 <td>
-                                    <p><a href="http://www.lwtech.edu/" target="_blank">http://www.lwtech.edu</a></p>
+                                    <p><a href="http://www.lwtech.edu/" rel="noopener"
+                                            target="_blank">http://www.lwtech.edu</a></p>
                                 </td>
                                 <td>
                                     <p>Bothell</p>
@@ -276,7 +279,8 @@
                                     <p>Pima Medical Institute</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://pmi.edu/" target="_blank">https://pmi.edu/</a></p>
+                                    <p><a href="https://pmi.edu/" rel="noopener" target="_blank">https://pmi.edu/</a>
+                                    </p>
                                 </td>
                                 <td>
                                     <p>Seattle</p>
@@ -287,7 +291,8 @@
                                     <p>Renton Technical College</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://rtc.edu/" target="_blank">https://rtc.edu/</a></p>
+                                    <p><a href="https://rtc.edu/" rel="noopener" target="_blank">https://rtc.edu/</a>
+                                    </p>
                                 </td>
                                 <td>
                                     <p>Renton</p>
@@ -303,23 +308,28 @@
             </div>
         </section>
         <div class="box">
-            <iframe
-                src="https://docs.google.com/presentation/d/1gW5I1wlVp6r9qfiOxu-cElBi1ciIDgvztkJZdpNFs4Q/edit?usp=sharing"
-                frameborder="0" width="1500" height="890" allowfullscreen="true" mozallowfullscreen="true"
+            <h2>The School I Chose - Analise</h2>
+            <hr>
+            <iframe title="The School I Chose - Analise"
+                src="https://docs.google.com/presentation/d/1gW5I1wlVp6r9qfiOxu-cElBi1ciIDgvztkJZdpNFs4Q/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" width="1600" height="900" allowfullscreen mozallowfullscreen webkitallowfullscreen>
+            </iframe>
+        </div>
+        <div class="box">
+            <h2>The School I Chose - Sarah</h2>
+            <hr>
+            <iframe title="The School I Chose - Sarah"
+                src="https://docs.google.com/presentation/d/1gvxAGLWaszIcScLCFjG39bNE_v71tkUBmr-idutmTkE/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" width="1600" height="900" allowfullscreen="true" mozallowfullscreen="true"
                 webkitallowfullscreen="true">
             </iframe>
         </div>
         <div class="box">
-            <iframe
-                src="https://docs.google.com/presentation/d/1gvxAGLWaszIcScLCFjG39bNE_v71tkUBmr-idutmTkE/edit?usp=sharing"
-                frameborder="0" width="1500" height="890" allowfullscreen="true" mozallowfullscreen="true"
-                webkitallowfullscreen="true">
-            </iframe>
-        </div>
-        <div class="box">
-            <iframe
-                src="https://docs.google.com/presentation/d/1Zr6RAumHoJsFIzcvYzwHEd9Ei911qBeK0dMlhWXT6HA/edit?usp=sharing"
-                frameborder="0" width="1500" height="890" allowfullscreen="true" mozallowfullscreen="true"
+            <h2>Best Colleges Visit - Joshua</h2>
+            <hr>
+            <iframe title="Best Colleges Visit - Joshua"
+                src="https://docs.google.com/presentation/d/1Zr6RAumHoJsFIzcvYzwHEd9Ei911qBeK0dMlhWXT6HA/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" width="1600" height="900" allowfullscreen="true" mozallowfullscreen="true"
                 webkitallowfullscreen="true">
             </iframe>
         </div>
