--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -21,16 +21,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="intasc1.html" id="learner">1. Learner Development</a>
-                        <a href="intasc2.html" id="learner">2. Learning Differences</a>
-                        <a href="#" id="learner">3. Learning Environments</a>
-                        <a href="intasc4.html" id="content">4. Content Knowledge</a>
-                        <a href="intasc5.html" id="content">5. Content Application</a>
-                        <a href="intasc6.html" id="instructional">6. Assessment</a>
-                        <a href="intasc7.html" id="instructional">7. Instructional Planning</a>
-                        <a href="intasc8.html" id="instructional">8. Instructional Strategies</a>
-                        <a href="intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
-                        <a href="intasc10.html" id="professional">10. Leadership & Collaboration</a>
+                        <a href="intasc1.html" class="learner">1. Learner Development</a>
+                        <a href="intasc2.html" class="learner">2. Learning Differences</a>
+                        <a href="#" class="learner">3. Learning Environments</a>
+                        <a href="intasc4.html" class="content">4. Content Knowledge</a>
+                        <a href="intasc5.html" class="content">5. Content Application</a>
+                        <a href="intasc6.html" class="instructional">6. Assessment</a>
+                        <a href="intasc7.html" class="instructional">7. Instructional Planning</a>
+                        <a href="intasc8.html" class="instructional">8. Instructional Strategies</a>
+                        <a href="intasc9.html" class="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="intasc10.html" class="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
@@ -39,15 +39,20 @@
         <h1 class="intasc">InTASC Standard #3<br>Learning Environments</h1>
         <div class="box intasc">
             <blockquote class="italics">The teacher works with others to create environments that support individual
-                and
-                collaborative learning, and that encourage positive social interaction, active engagement in
-                learning,
-                and self motivation.</blockquote>
+                and collaborative learning, and that encourage positive social interaction, active engagement in
+                learning, and self motivation.</blockquote>
 
-            <p>This standard is about building an environment that is conducive to learning. Expectations are high.
-                Students feel safe; students work together collaboratively and the interactions are respectful.
-                Students with learning differences get the support they need.</p>
-            <p>The artifacts below are some of the ways in which I met this standard:</p>
+            <p>This standard is about building an environment that is conducive to learning. I set expectations high but
+                take steps to help students feel safe. Starting a semester with a fun icebreaker is one such strategy.
+                Working together collaboratively also leads to students feeling less isolated and able to learn from
+                each other. Students with learning differences get the support they need.</p>
+            <p>We also help each other feel safe by setting a ground rule that all interactions are respectful. I never
+                had to issue more than a verbal correction for disrespectful speech during my internship, but if needed
+                I could escalate to detention or support from the student’s counselor.</p>
+            <p>A couple times I did need to have the conversation that just because your friend says he’s “okay with it”
+                doesn’t make it okay. He doesn’t want to lose your friendship. What kind of friend are you to put him in
+                that position?</p>
+            <p>The artifacts below show some other ways I worked to build a safe, supportive learning environment:</p>
             <ul>
                 <li>"Human Bingo" Icebreaker for the first day of Personal Finance class. There were two versions of
                     the Bingo form, passed out randomly to the students. Students went around talking to each other
@@ -61,9 +66,11 @@
                 <li>Personal Finance class: Paying for College Unit: lesson on FAFSA: "ANALYZE: A FAFSA Submission
                     Summary" assignment made available in English and Spanish. A sizeable number of the students in
                     that class were Hispanic.</li>
-                <li>Hunt the Wumpus Group Assignments spreadsheet. Students worked together to create their group's
-                    version of the "Hunt the Wumpus" game as part of a competition sponsored by Microsoft. Microsoft
-                    volunteer advisors came two days a week to explain the requirements and assist the students.
+                <li>Team Assignments spreadsheet for the Microsoft sponsored “Hunt the Wumpus” competition: students
+                    were assigned into teams to work together to create their group's version of the "Hunt the Wumpus"
+                    game. Each student had an assigned component and their code had to work together, just like a real
+                    dev team. Microsoft volunteer advisors came two days a week to explain the requirements and assist
+                    the students.
                 </li>
             </ul>
         </div>
@@ -72,8 +79,8 @@
             <embed src="pdf/Human Bingo.pdf" type="application/pdf" width="800px" height="1000px"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/History of Computer Science Group Discussion Questions.pdf" type="application/pdf" width="800px"
-                height="1000px" title="Embedded PDF Document">
+            <embed src="pdf/History of Computer Science Group Discussion Questions.pdf" type="application/pdf"
+                width="800px" height="1000px" title="Embedded PDF Document">
 
             <iframe src="https://docs.google.com/document/d/1vZ_wLhk6d91G0dWjN1TxRIoiOxVg-4N5ETtPT69OrGw/edit?tab=t.0"
                 width="800px" height="1000px" allowfullscreen></iframe>
@@ -84,9 +91,9 @@
         </section>
 
         <section class="intasc grid1">
-        <iframe
-            src="https://docs.google.com/spreadsheets/d/1YZTxqNx6rswe41J9zWqH-Qm2-k6Q6pDpUU9mFVk7wSk/edit?usp=sharing"
-            width="1200" height="800" allowfullscreen></iframe>
+            <iframe
+                src="https://docs.google.com/spreadsheets/d/1YZTxqNx6rswe41J9zWqH-Qm2-k6Q6pDpUU9mFVk7wSk/edit?usp=sharing"
+                width="1200" height="800" allowfullscreen></iframe>
         </section>
     </section>
 </body>
