--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -21,23 +21,22 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="intasc1.html" id="learner">1. Learner Development</a>
-                        <a href="intasc2.html" id="learner">2. Learning Differences</a>
-                        <a href="intasc3.html" id="learner">3. Learning Environments</a>
-                        <a href="#" id="content">4. Content Knowledge</a>
-                        <a href="intasc5.html" id="content">5. Content Application</a>
-                        <a href="intasc6.html" id="instructional">6. Assessment</a>
-                        <a href="intasc7.html" id="instructional">7. Instructional Planning</a>
-                        <a href="intasc8.html" id="instructional">8. Instructional Strategies</a>
-                        <a href="intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
-                        <a href="intasc10.html" id="professional">10. Leadership & Collaboration</a>
+                        <a href="intasc1.html" class="learner">1. Learner Development</a>
+                        <a href="intasc2.html" class="learner">2. Learning Differences</a>
+                        <a href="intasc3.html" class="learner">3. Learning Environments</a>
+                        <a href="#" class="content">4. Content Knowledge</a>
+                        <a href="intasc5.html" class="content">5. Content Application</a>
+                        <a href="intasc6.html" class="instructional">6. Assessment</a>
+                        <a href="intasc7.html" class="instructional">7. Instructional Planning</a>
+                        <a href="intasc8.html" class="instructional">8. Instructional Strategies</a>
+                        <a href="intasc9.html" class="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="intasc10.html" class="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
         </nav>
 
         <h1 class="intasc">InTASC Standard #4<br>Content Knowledge</h1>
-
         <div class="box intasc">
             <blockquote class="italics">The teacher understands the central concepts, tools of inquiry, and structures
                 of the discipline(s) he or she teaches and creates learning experiences that make the discipline
@@ -51,7 +50,10 @@
                 basics, the real skill needed in industry isn't what you know but how fast you can learn. I transmit
                 this skill by honestly answering, when appropriate, "I don't know, let's find out" and assisting a
                 student researching a topic or technique.</p>
-            <p>The artifacts demonstrating my content knowledge are:</p>
+            <p>Artifacts I've created that demonstrate my content knowledge:</p>
+        </div>
+        <div class="box intasc">
+            <h2>Websites</h2>
             <ol>
                 <li><em>This very website!</em> I teach HTML and this portfolio website was written manually, not with a
                     tool.
@@ -59,29 +61,31 @@
                     a website as their final project for the quarter, so it's been fun to show them my final project as
                     I'm creating it. My students have access to the source code: <a
                         href="https://github.com/GaryMalk/portfolio"
-                        target="_blank">https://github.com/GaryMalk/portfolio</a>&nbsp;</li>
+                        rel="noopener" target="_blank">https://github.com/GaryMalk/portfolio</a>&nbsp;</li>
                 <li>The CS Toolkit I created as an assignment for the CWU MAT tech class: <a
                         href="https://garymalk.github.io/CSToolkit"
-                        target="_blank">https://garymalk.github.io/CSToolkit</a>. Again, written by hand, with special
+                        rel="noopener" target="_blank">https://garymalk.github.io/CSToolkit</a>. Again, written by hand, with special
                     care to make the whole site demonstrable of the coding techniques I teach my students in the HTML
                     class. Students have access to the source code: <a href="https://github.com/GaryMalk/CSD112"
-                        target="_blank">https://github.com/GaryMalk/CSD112</a></li>
-                <li>History of Computer Science PowerPoint presentation: I give this lecture on the first day of all my
-                    computer science classes (HTML, C#, Java, Algorithms) because it is important for students to
-                    understand where we are in history, the contributions of the pioneers, and what new challenges
-                    their generation will work on. It's also important to see no matter who you are that important
-                    contributions were made by people who look like you.</li>
-                <li>Programming Loops and Counters PowerPoint presentation</li>
-                <li>Personal Finance: Paying for College unit: Paying for College Part I PowerPoint presentation</li>
+                        rel="noopener" target="_blank">https://github.com/GaryMalk/CSD112</a></li>
+            </ol>
+        </div>
+        <div class="box intasc">
+            <h2>PowerPoints</h2>
+            <ol start="3">
+                <li>Programming Loops and Counters: Introductory lesson on a basic programming technique</li>
+                <li>Trees, Binary Trees, and AVL Trees: Lesson for Algorithms and Data Structures, an upper division
+                    college course.</li>
+                <li>Personal Finance: Paying for College unit: Paying for College Part I, based on my research as a dad.
+                </li>
             </ol>
         </div>
 
         <section class="intasc grid1">
-            <embed src="pdf/History of Computer Science.pdf" type="application/pdf" width="1500px" height="800px"
+            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500px" height="800px"
                 title="Embedded PDF Document">
-
-            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500px" height="800px" title="Embedded PDF Document">
-
+            <embed src="pdf/Trees.pdf" type="application/pdf" width="1500px" height="800px"
+                title="Embedded PDF Document">
             <embed src="pdf/Paying for College Part I.pdf" type="application/pdf" width="1500px" height="800px"
                 title="Embedded PDF Document">
         </section>
