--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -22,16 +22,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="intasc1.html" id="learner">1. Learner Development</a>
-                        <a href="intasc2.html" id="learner">2. Learning Differences</a>
-                        <a href="intasc3.html" id="learner">3. Learning Environments</a>
-                        <a href="intasc4.html" id="content">4. Content Knowledge</a>
-                        <a href="#" id="content">5. Content Application</a>
-                        <a href="intasc6.html" id="instructional">6. Assessment</a>
-                        <a href="intasc7.html" id="instructional">7. Instructional Planning</a>
-                        <a href="intasc8.html" id="instructional">8. Instructional Strategies</a>
-                        <a href="intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
-                        <a href="intasc10.html" id="professional">10. Leadership & Collaboration</a>
+                        <a href="intasc1.html" class="learner">1. Learner Development</a>
+                        <a href="intasc2.html" class="learner">2. Learning Differences</a>
+                        <a href="intasc3.html" class="learner">3. Learning Environments</a>
+                        <a href="intasc4.html" class="content">4. Content Knowledge</a>
+                        <a href="#" class="content">5. Content Application</a>
+                        <a href="intasc6.html" class="instructional">6. Assessment</a>
+                        <a href="intasc7.html" class="instructional">7. Instructional Planning</a>
+                        <a href="intasc8.html" class="instructional">8. Instructional Strategies</a>
+                        <a href="intasc9.html" class="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="intasc10.html" class="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
@@ -62,44 +62,47 @@
             <div class="box intasc" id="projects">
                 <h2 class="left">Final Projects Fall '24:</h2>
                 <br><a href="https://garymalk.github.io/CSD112/bipolar-disorder/BIPOLAR%20DISORDER.html"
-                    target="_blank">Bipolar Disorder Awareness</a>
-                <br><a href="https://garymalk.github.io/CSD112/botblasters/home.html" target="_blank">BOTBLASTERS</a>
-                <br><a href="https://garymalk.github.io/CSD112/budget-computers" target="_blank">Budget Computers</a>
+                    rel="noopener" target="_blank">Bipolar Disorder Awareness</a>
+                <br><a href="https://garymalk.github.io/CSD112/botblasters/home.html" rel="noopener" target="_blank">BOTBLASTERS</a>
+                <br><a href="https://garymalk.github.io/CSD112/budget-computers" rel="noopener" target="_blank">Budget Computers</a>
                 <br><a href="https://garymalk.github.io/CSD112/Carla_Coates_Portfolio/Portfolio_final.html"
-                    target="_blank">Carla Coates Portfolio</a>
-                <br><a href="https://garymalk.github.io/CSD112/cartinting" target="_blank">Car Tinting</a>
-                <br><a href="https://garymalk.github.io/CSD112/checkplease" target="_blank">Check Please</a>
-                <br><a href="https://garymalk.github.io/CSD112/cooking_odyssey" target="_blank">Cooking Odyssey</a>
-                <br><a href="https://garymalk.github.io/CSD112/echoes-of-hope/Index.html" target="_blank">Echoes of
+                    rel="noopener" target="_blank">Carla Coates Portfolio</a>
+                <br><a href="https://garymalk.github.io/CSD112/cartinting" rel="noopener" target="_blank">Car Tinting</a>
+                <br><a href="https://garymalk.github.io/CSD112/checkplease" rel="noopener" target="_blank">Check Please</a>
+                <br><a href="https://garymalk.github.io/CSD112/cooking_odyssey" rel="noopener" target="_blank">Cooking Odyssey</a>
+                <br><a href="https://garymalk.github.io/CSD112/echoes-of-hope/Index.html" rel="noopener" target="_blank">Echoes of
                     Hope</a>
-                <br><a href="https://garymalk.github.io/CSD112/greencorner" target="_blank">Green Corner</a>
-                <br><a href="https://garymalk.github.io/CSD112/koza-landscaping" target="_blank">Koza Landscaping</a>
-                <br><a href="https://garymalk.github.io/CSD112/microcrochet" target="_blank">Microcrochet</a>
-                <br><a href="https://garymalk.github.io/CSD112/redvox/home.html" target="_blank">RedVox</a>
-                <br><a href="https://garymalk.github.io/CSD112/pet-shop" target="_blank">Pet Shop</a>
-                <br><a href="https://garymalk.github.io/CSD112/service-hub/home.html" target="_blank">Service Hub</a>
-                <br><a href="https://garymalk.github.io/CSD112/silverstrait" target="_blank">Silverstrait</a>
-                <br><a href="https://garymalk.github.io/CSD112/whistler/index.html" target="_blank">Whistler</a>
+                <br><a href="https://garymalk.github.io/CSD112/greencorner" rel="noopener" target="_blank">Green Corner</a>
+                <br><a href="https://garymalk.github.io/CSD112/koza-landscaping" rel="noopener" target="_blank">Koza Landscaping</a>
+                <br><a href="https://garymalk.github.io/CSD112/microcrochet" rel="noopener" target="_blank">Microcrochet</a>
+                <br><a href="https://garymalk.github.io/CSD112/redvox/home.html" rel="noopener" target="_blank">RedVox</a>
+                <br><a href="https://garymalk.github.io/CSD112/pet-shop" rel="noopener" target="_blank">Pet Shop</a>
+                <br><a href="https://garymalk.github.io/CSD112/service-hub/home.html" rel="noopener" target="_blank">Service Hub</a>
+                <br><a href="https://garymalk.github.io/CSD112/silverstrait" rel="noopener" target="_blank">Silverstrait</a>
+                <br><a href="https://garymalk.github.io/CSD112/whistler/index.html" rel="noopener" target="_blank">Whistler</a>
+                <br>
                 <br>
             </div>
             <div class="box intasc">
                 <h2 class="left">Final Projects Summer '24:</h2>
-                <br><a href="https://garymalk.github.io/CSD112/Disbarred/index.html" target="_blank">Disbarred</a>
-                <br><a href="https://garymalk.github.io/CSD112/Grigory/index.html" target="_blank">Grigory</a>
-                <br><a href="https://garymalk.github.io/CSD112/Japan/home.html" target="_blank">Studying in Japan</a>
-                <br><a href="https://garymalk.github.io/CSD112/KayibaConnect/index.html" target="_blank">Kayiba
+                <br><a href="https://garymalk.github.io/CSD112/Disbarred/index.html" rel="noopener" target="_blank">Disbarred</a>
+                <br><a href="https://garymalk.github.io/CSD112/Grigory/index.html" rel="noopener" target="_blank">Grigory</a>
+                <br><a href="https://garymalk.github.io/CSD112/Japan/home.html" rel="noopener" target="_blank">Studying in Japan</a>
+                <br><a href="https://garymalk.github.io/CSD112/KayibaConnect/index.html" rel="noopener" target="_blank">Kayiba
                     Connect</a>
-                <br><a href="https://garymalk.github.io/CSD112/MKArt/Index.html" target="_blank">MK Art</a>
-                <br><a href="https://garymalk.github.io/CSD112/TheMovement/index.html" target="_blank">The Movement</a>
+                <br><a href="https://garymalk.github.io/CSD112/MKArt/Index.html" rel="noopener" target="_blank">MK Art</a>
+                <br><a href="https://garymalk.github.io/CSD112/TheMovement/index.html" rel="noopener" target="_blank">The Movement</a>
                 <br><a href="https://garymalk.github.io/CSD112/Tanks/Small%20World%20War%20II%20Tank%20Museum.html"
-                    target="_blank">Small World War II Tank Museum</a>
-                <br><a href="https://garymalk.github.io/CSD112/ToyotaSupra/index.html" target="_blank">Toyota Supra</a>
-                <br><a href="https://garymalk.github.io/CSD112/Warhammer/Index.html" target="_blank">Warhammer</a>
+                    rel="noopener" target="_blank">Small World War II Tank Museum</a>
+                <br><a href="https://garymalk.github.io/CSD112/ToyotaSupra/index.html" rel="noopener" target="_blank">Toyota Supra</a>
+                <br><a href="https://garymalk.github.io/CSD112/Warhammer/Index.html" rel="noopener" target="_blank">Warhammer</a>
+                <br>
+                <br>
             </div>
         </section>
         <br>
         <section class="intasc grid1">
-            <embed src="pdf/RESEARCH - Find Your Next Car.pdf" type="application/pdf" width="1600px" height="900px"
+            <embed src="pdf/RESEARCH - Find Your Next Car.pdf" type="application/pdf" width="1200px" height="900px"
                 title="Embedded PDF Document">
         </section>
     </section>
