--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="school cwusign intasc">
+    <section class="school inglemoor-leaf intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -22,16 +22,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="intasc1.html" id="learner">1. Learner Development</a>
-                        <a href="intasc2.html" id="learner">2. Learning Differences</a>
-                        <a href="intasc3.html" id="learner">3. Learning Environments</a>
-                        <a href="intasc4.html" id="content">4. Content Knowledge</a>
-                        <a href="intasc5.html" id="content">5. Content Application</a>
-                        <a href="intasc6.html" id="instructional">6. Assessment</a>
-                        <a href="intasc7.html" id="instructional">7. Instructional Planning</a>
-                        <a href="intasc8.html" id="instructional">8. Instructional Strategies</a>
-                        <a href="intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
-                        <a href="#" id="professional">10. Leadership & Collaboration</a>
+                        <a href="intasc1.html" class="learner">1. Learner Development</a>
+                        <a href="intasc2.html" class="learner">2. Learning Differences</a>
+                        <a href="intasc3.html" class="learner">3. Learning Environments</a>
+                        <a href="intasc4.html" class="content">4. Content Knowledge</a>
+                        <a href="intasc5.html" class="content">5. Content Application</a>
+                        <a href="intasc6.html" class="instructional">6. Assessment</a>
+                        <a href="intasc7.html" class="instructional">7. Instructional Planning</a>
+                        <a href="intasc8.html" class="instructional">8. Instructional Strategies</a>
+                        <a href="intasc9.html" class="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="#" class="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
@@ -65,54 +65,57 @@
                     who came twice a week acting as advisors.</p>
                 <p>I taught the students about source control, how to create a code repository on GitHub, and how to
                     merge code so that multiple developers can work together in the same repository. I gave advice,
-                    montiored progress, and helped to debug and sometimes detangle failed merges. The students were
-                    required to add me as a collaborator on their repositories. Artifacts presented are the assignment
-                    in Schoology requiring students to do this, a screenshot of an email inviting me to collaborate, and
-                    a screenshot of a GitHub repository.</p>
-                <p>On the big day we took the two classes to Microsoft for the judging competition with several other
+                    montiored progress, and helped to debug and sometimes detangle failed merges. Students were
+                    required to add me as a repository collaborator.</p>
+                <p>On the big day we took our classes to Microsoft for the judging competition with several other
                     schools competing. Three of our eight teams brought home trophies, one of which is also presented as
-                    an artifact.</p>
+                    an artifact. Other artifacts presented are a screenshot of a GitHub repository and a collaboration
+                    invite</p>
             </div>
 
-            <embed src="pdf/GIT Enlistment.pdf" type="application/pdf" width="600px" height="500px"
-                title="Embedded PDF Document">
-            <img src="../img/Wumpus Github Invite.png"
-                alt="email screenshot of an invite to collaborate on a Wumpus respository in GitHub">
-            <img src="../img/Wumpus Github.png" alt="screenshot of a Wumpus respository in GitHub">
+            <img src="../img/wumpus.jpg" alt="winning students holding the Hunt the Wumpus trophy">
 
-            <img src="../img/wumpus.jpg" alt="winning students holding Hunt the Wumpus trophy">
+            <div class="grid1">
+                <img src="../img/Wumpus Github.png" alt="screenshot of a Wumpus respository in GitHub">
+                <img src="../img/Wumpus Github Invite.png"
+                    alt="email screenshot of an invite to collaborate on a Wumpus respository in GitHub">
+            </div>
 
             <div class="box intasc">
-                <h3>Cross-Discipline Instruction</h2>
-                    <p>As a college student, I always enjoyed the way history was interwoven into my science and
-                        mathematics classes. I teach my computer science classes that way, too, because it's important
-                        for students to understand their place in history, where it started, and where it's going.
-                        Presented as an artifact is the PowerPoint of The History of Computer Science, which is my
-                        favorite lecture to deliver.
-                    </p>
-                    <p>This last year I also taught Personal Finance, including a unit on Paying for College. One of the
-                        lessons I developed was on winning scholarships, with an assigned scholarship essay. Teaching
-                        how to write an essay was language arts. Students were taught that the elements of a winning
-                        scholarhip essay are:
-                    </p>
+                <h2>Cross-Discipline Instruction</h2>
+                <h3>Social Studies</h3>
+                <p>History of Computer Science PowerPoint presentation: I give this lecture on the first day of all
+                    my computer science classes (HTML, C#, Java, Algorithms) because it is important for students to
+                    understand where we are in history, the contributions of the pioneers, and what new challenges
+                    their generation will work on. It's also important to see no matter who you are that important
+                    contributions were made by people who look like you.</p>
+                <h3>Language Arts</h3>
+                <p>This last year I also taught Personal Finance, including a unit on Paying for College. One of the
+                    lessons I developed was on winning scholarships, with an assigned scholarship essay. Students were
+                    taught that the elements of a winning scholarhip essay are:</p>
 
-                    <div class="grid2">
-                        <ul>
-                            <li>Core Values</li>
-                            <li>Personal Insights</li>
-                            <li>Vulnerability</li>
-                            <li>Craft</li>
-                        </ul>
-                        <ul>
-                            <li>A tie-in to your educational and career goals</li>
-                            <li>How you plan to use your education to give back</li>
-                        </ul>
-                    </div>
-                    <p>As an example, I present from the Assessment page a scholarship rough draft written by one of my
-                        students, the feedback I gave him, and his final draft: <a
-                            href="intasc6.html#scholarship">Scholarship Essay</a></p>
+                <div class="grid2">
+                    <ul>
+                        <li>Core Values</li>
+                        <li>Personal Insights</li>
+                        <li>Vulnerability</li>
+                        <li>Craft</li>
+                    </ul>
+                    <ul>
+                        <li>A tie-in to your educational and career goals</li>
+                        <li>How you plan to use your education to give back</li>
+                    </ul>
+                </div>
+                <p>As an example, I present from the Assessment page a scholarship rough draft written by one of my
+                    students, the feedback I gave him, and his final draft: <a
+                        href="intasc6.html#scholarship">Scholarship Essay</a></p>
             </div>
-
+        </section>
+        <div class="intasc grid1">
+            <embed src="pdf/History of Computer Science.pdf" type="application/pdf" width="1500px" height="800px"
+                title="Embedded PDF Document">
+        </div>
+        <section class="intasc grid2">
             <div class="box intasc">
                 <h2>Toastmasters Club</h2>
                 <p>I've been a Toastmaster for five years. I've been an officer in multiple roles, including club
@@ -129,25 +132,29 @@
             <img src="../img/TM-AD.jpg"
                 alt="email notifying me that my area had acheived President's Distinguished Area for Toastmasters">
 
-            <div class="box intasc">
-                <h2>PTA Membership</h2>
-                <p>As a dad, I've been a member of the PTA, regularly attending meetings and volunteering. I've been a
-                    field trip chaperone, volunteered in a classroom for a day, and helped with field day. Because of my
-                    past advocacy for foster kids, I had experience working with the legislature so I was Legislative
-                    Liason two years in a row and organized kids to come to Olympia on PTA Lobby Day (usually on MLK
-                    Day). I plan to suport the PTA as a teacher as well. My artifact is a photo of my D.O.G.S. (Dads of
-                    Great Students) t-shirt, worn while volunteering.</p>
+
+            <div class="grid1">
+                <div class="box intasc">
+                    <h2>PTA Membership</h2>
+                    <p>As a dad, I've been a member of the PTA, regularly attending meetings and volunteering. I've been
+                        a field trip chaperone, volunteered in a classroom for a day, and helped with field day. Because
+                        of my past advocacy for foster kids, I had experience working with the legislature so I was
+                        Legislative Liason two years in a row and organized kids to come to Olympia on PTA Lobby Day
+                        (usually on MLK Day). I plan to suport the PTA as a teacher as well. My artifact is a photo of
+                        my Watch D.O.G.S. (Dads of Great Students) t-shirt, worn while volunteering.</p>
+                </div>
+                <div class="box intasc">
+                    <h2>Community Leadership</h2>
+                    <p>I have been a foster/adopt dad and advocated for foster kids, testifying in Olympia and working
+                        toward the passage of foster care reforms. I'm a member of my church's charity committee, and
+                        have organized or assisted in multiple programs, including food drives for the Woodinville
+                        Storehouse food bank and toiletries drives for the homeless women and their families who live in
+                        "Safe Parking" at a local church. Many years ago, I was humanitarian aid director for a
+                        grass-roots organization, living in Romania and coordinating delivery of aid and supervising
+                        volunteers at Romanian orphanages.</p>
+                </div>
             </div>
-            <div class="box intasc">
-                <h2>Community Leadership</h2>
-                <p>I have been a foster/adopt dad and advocated for foster kids, testifying in Olympia and working
-                    toward the passage of foster care reforms. I'm a member of my church's charity committee, and have
-                    organized or assisted in multiple programs, including food drives for the Woodinville Storehouse
-                    food bank and toiletries drives for the homeless women and their families who live in "Safe Parking"
-                    at a local church. Many years ago, I was humanitarian aid director for a grass-roots organization,
-                    living in Romania and coordinating delivery of aid and supervising volunteers at Romanian
-                    orphanages.</p>
-            </div>
+            <img src="../img/Watch Dogs shirt.jpg" alt="Watch DOGS t-shirt">
         </section>
     </section>
 </body>
