--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -22,16 +22,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="intasc1.html" id="learner">1. Learner Development</a>
-                        <a href="intasc2.html" id="learner">2. Learning Differences</a>
-                        <a href="intasc3.html" id="learner">3. Learning Environments</a>
-                        <a href="intasc4.html" id="content">4. Content Knowledge</a>
-                        <a href="intasc5.html" id="content">5. Content Application</a>
-                        <a href="#" id="instructional">6. Assessment</a>
-                        <a href="intasc7.html" id="instructional">7. Instructional Planning</a>
-                        <a href="intasc8.html" id="instructional">8. Instructional Strategies</a>
-                        <a href="intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
-                        <a href="intasc10.html" id="professional">10. Leadership & Collaboration</a>
+                        <a href="intasc1.html" class="learner">1. Learner Development</a>
+                        <a href="intasc2.html" class="learner">2. Learning Differences</a>
+                        <a href="intasc3.html" class="learner">3. Learning Environments</a>
+                        <a href="intasc4.html" class="content">4. Content Knowledge</a>
+                        <a href="intasc5.html" class="content">5. Content Application</a>
+                        <a href="#" class="instructional">6. Assessment</a>
+                        <a href="intasc7.html" class="instructional">7. Instructional Planning</a>
+                        <a href="intasc8.html" class="instructional">8. Instructional Strategies</a>
+                        <a href="intasc9.html" class="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="intasc10.html" class="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                         use these tools, too, and if I find any errors the tools immediately become summative! We have
                         weekly assignments, so getting points knocked off a previous one is usually, again, a formative
                         experience. There are many online valiator tools, but these are my favorites:
-                        <br><a href="https://validator.w3.org/" target="_blank">HTML Validator</a>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS
+                        <br><a href="https://validator.w3.org/" rel="noopener" target="_blank">HTML Validator</a>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://jigsaw.w3.org/css-validator/" rel="noopener" target="_blank">CSS
                             Validator</a>
                     </li>
                     <li>
@@ -231,7 +231,6 @@
             <embed src="pdf/Item Banks.pdf" type="application/pdf" width="800px" height="800px"
                 title="Embedded PDF Document">
         </section>
-        <p></p>
     </section>
 </body>
 
