--- a/pages/philosophy.html
+++ b/pages/philosophy.html
@@ -21,16 +21,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="../intasc/intasc1.html" id="learner">1. Learner Development</a>
-                        <a href="../intasc/intasc2.html" id="learner">2. Learning Differences</a>
-                        <a href="../intasc/intasc3.html" id="learner">3. Learning Environments</a>
-                        <a href="../intasc/intasc4.html" id="content">4. Content Knowledge</a>
-                        <a href="../intasc/intasc5.html" id="content">5. Content Application</a>
-                        <a href="../intasc/intasc6.html" id="instructional">6. Assessment</a>
-                        <a href="../intasc/intasc7.html" id="instructional">7. Instructional Planning</a>
-                        <a href="../intasc/intasc8.html" id="instructional">8. Instructional Strategies</a>
-                        <a href="../intasc/intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
-                        <a href="../intasc/intasc10.html" id="professional">10. Leadership & Collaboration</a>
+                        <a href="../intasc/intasc1.html" class="learner">1. Learner Development</a>
+                        <a href="../intasc/intasc2.html" class="learner">2. Learning Differences</a>
+                        <a href="../intasc/intasc3.html" class="learner">3. Learning Environments</a>
+                        <a href="../intasc/intasc4.html" class="content">4. Content Knowledge</a>
+                        <a href="../intasc/intasc5.html" class="content">5. Content Application</a>
+                        <a href="../intasc/intasc6.html" class="instructional">6. Assessment</a>
+                        <a href="../intasc/intasc7.html" class="instructional">7. Instructional Planning</a>
+                        <a href="../intasc/intasc8.html" class="instructional">8. Instructional Strategies</a>
+                        <a href="../intasc/intasc9.html" class="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="../intasc/intasc10.html" class="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
